# nfstest

./: README.md
.trae/documents/: standalone-rpc-client-plan.md
.trae/specs/nfs3-rpc-test-suite/: checklist.md  spec.md  tasks.md
nfs3_rpc_tests/: .gitignore  CMakeLists.txt  README.md
nfs3_rpc_tests/cmake/: FindTirpc.cmake  toolchain_template.cmake
nfs3_rpc_tests/examples/: basic_connect.cpp  nfs_operations.cpp
nfs3_rpc_tests/include/nfs3/: expected.hpp  mount_client.hpp  nfs3_client.hpp  nfs3_constants.hpp  nfs3_types.hpp  nfs3_xdr.hpp  rpc_endpoint.hpp  test_context.hpp  xdr_bridge.hpp  xdr_codec.hpp
nfs3_rpc_tests/include/nfs3/detail/: xdr_primitive.hpp
nfs3_rpc_tests/scripts/: run_tests.sh
nfs3_rpc_tests/src/: mount_client.cpp  nfs3_client.cpp  nfs3_xdr.cpp  rpc_endpoint.cpp  test_context.cpp  xdr_codec.cpp
nfs3_rpc_tests/src/detail/: xdr_primitive.cpp
nfs3_rpc_tests/tests/: CMakeLists.txt  test_nfs3_create.cpp  test_nfs3_getattr.cpp  test_nfs3_lookup.cpp  test_nfs3_other.cpp  test_nfs3_readdir.cpp  test_nfs3_readwrite.cpp  test_nfs3_remove.cpp  test_nfs3_stress.cpp  test_real_rpc.cpp  test_rpc_errors.cpp  test_rpc_null.cpp  test_xdr.cpp
nfs3_rpc_tests_c/: CMakeLists.txt
nfs3_rpc_tests_c/include/nfs3_c/: nfs3_constants.h  nfs3_types.h  nfs3_xdr.h  xdr_codec.h
nfs3_rpc_tests_c/scripts/: run_tests.sh
nfs3_rpc_tests_c/src/: nfs3_types.c  nfs3_xdr.c  xdr_codec.c
nfs3_rpc_tests_c/tests/: CMakeLists.txt  nfs3_server_test.c  nfs3_server_test.h  test_framework.h  test_lockd_c.c  test_lockd_unavail_c.c  test_main.c  test_nfs3_create.c  test_nfs3_dir_c.c  test_nfs3_getattr.c  test_nfs3_io_c.c  test_nfs3_lookup.c  test_nfs3_meta_c.c  test_nfs3_namespace_c.c  test_nfs3_readdir.c  test_nfs3_readwrite.c  test_nfs3_symlink_special_c.c  test_nfs3_xdr_full.c  test_rpc_fuzz.c  test_rpc_real.c  test_rpc_robustness.c  test_xdr.c
shared_rpc/: CMakeLists.txt
shared_rpc/include/nfstest/: rpc_client.h  rpc_client.hpp  rpc_protocol.hpp  rpc_transport.hpp
shared_rpc/src/: rpc_client.cpp  rpc_transport.cpp
simple_rpc/: CMakeLists.txt
simple_rpc/include/nfstest/: rpc_client.hpp
